--- a/cARK/cARK.vcxproj
+++ b/cARK/cARK.vcxproj
@@ -151,12 +151,12 @@
   <ItemGroup>
     <ClCompile Include="ChronoArk.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="源.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Buffer.h" />
+    <ClInclude Include="Base.h" />
+    <ClInclude Include="Buff.h" />
     <ClInclude Include="Card.h" />
-    <ClInclude Include="CardDate.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Role.h" />
