--- a/cARK/cARK.vcxproj.filters
+++ b/cARK/cARK.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="源.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -26,13 +23,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Buffer.h">
+    <ClInclude Include="Buff.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Card.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CardDate.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
@@ -42,6 +36,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Role.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Base.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Character.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
