更改：定义cardtype,完成cardfactory,测试card画图

--- a/cARK/cARK.vcxproj
+++ b/cARK/cARK.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Card.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ChronoArk.cpp" />
     <ClCompile Include="Game.cpp" />
