--- a/cARK/cARK.vcxproj.filters
+++ b/cARK/cARK.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Object.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Card.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Buff.h">
